# crewAI-Autogen-AutoGPT

./: .gitignore  .gitpod.yml  AutoGPT-Hello-World.ipynb  AutoGen_Content_Agent.ipynb  AutoGen_Content_Creation_WORK_IN_PROGRESS.ipynb  AutoGen_Hello_World.ipynb  AutoGen_Langchain_Chroma_PDF-Chat.ipynb  AutoGen_Screen_Writer.ipynb  AutoGen_Snake-Game.ipynb  AutoGen_groupchat_research.ipynb  Autogen Software-Dev.ipynb  CrewAi.ipynb  README.md  agent-output.txt  hello-world-marimo.py  report.md  requirements.txt
CrewAI/: CrewAi.ipynb  agent-output.txt  new-blog-post.md  web_voyager.ipynb
CrewAI/config-hello-world/: agents.yaml  tasks.yaml
CrewAI/crewAI-landing_page_generator/: .gitignore  README.md  _tool-test_just_for_testing.py  main.py  requirements.txt  requirements01 - from poetry.txt  terminal_output.txt
CrewAI/crewAI-landing_page_generator/config/: templates.json
CrewAI/crewAI-landing_page_generator/tools/: browser_tools-backup.py  browser_tools.py  template_tools.py
CrewAI/examples/hello_world/: README.md  pyproject.toml  report.md
CrewAI/examples/hello_world/src/hello_world/: crew.py  main.py
CrewAI/examples/surprise_trip/: RESULT - copied from terminal.md  pyproject.toml
CrewAI/output/: 2024-07-27_215224 5 top AI news blogpost.txt
CrewAI/workdir/: harry.txt
Integrations/AutoGen/: autogen_langchain_uniswap_ai_agent.ipynb
backend_dir/app/: main.py
